Update : Able to pridict